Bug 1011366 - Allow unaligned accesses in irregexp, r=jandem.